Bug 263797 - Minor refactoring of assertion code, v2
Summary: Minor refactoring of assertion code, v2
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Per Arne Vollan
URL:
Keywords: InRadar
Depends on: 268860
Blocks:
  Show dependency treegraph
 
Reported: 2023-10-27 12:57 PDT by Per Arne Vollan
Modified: 2024-02-06 14:34 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Arne Vollan 2023-10-27 12:57:51 PDT
Minor refactoring of assertion code, v2.
Comment 1 Radar WebKit Bug Importer 2023-10-27 12:58:11 PDT
<rdar://problem/117600174>
Comment 2 Per Arne Vollan 2023-10-27 13:00:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19650
Comment 3 EWS 2023-11-03 15:58:56 PDT
Committed 270212@main (5d6df4681148): <https://commits.webkit.org/270212@main>

Reviewed commits have been landed. Closing PR #19650 and removing active labels.